# simEnv

./: .gitignore  README.md  auto.sh  setup_multi_floor_simulation.py
devel/: .catkin  .rosinstall  local_setup.sh  setup.fish
devel/include/building_generator_interfaces/: CallElevator.h  CallElevatorRequest.h  CallElevatorResponse.h  SetDoorState.h  SetDoorStateRequest.h  SetDoorStateResponse.h
devel/include/multi_map_server/: MultiOccupancyGrid.h  MultiSparseMap3D.h  VerticalOccupancyGridList.h
devel/include/quadrotor_msgs/: AuxCommand.h  Odometry.h  OutputData.h  PPROutputData.h  PositionCommand.h  StatusData.h
devel/include/unitree_guide/: CustomMsg.h  CustomPoint.h
devel/include/unitree_legged_msgs/: BmsState.h  Cartesian.h  HighState.h  IMU.h  LowCmd.h  LowState.h
devel/lib/building_generator_classic/: building_generator_classic_control
devel/lib/building_generator_core/: building_generator_cli
devel/lib/building_obstacles/: evaluate_danger.py  spawn_red_spheres.py
devel/lib/local_sensing_node/: pcl_render_node
devel/lib/multi_map_server/: multi_map_visualization
devel/lib/odom_visualization/: odom_visualization
devel/lib/pkgconfig/: a1_description.pc  building_generator_classic.pc  building_generator_core.pc  building_generator_interfaces.pc  building_obstacles.pc  cmake_utils.pc  livox_laser_simulation.pc  local_sensing_node.pc  map_generator.pc  mockamap.pc  multi_map_server.pc  odom_visualization.pc  pose_utils.pc  quadrotor_msgs.pc  rviz_plugins.pc  simenv_cbf_train.pc  simenv_train.pc  so3_control.pc  so3_quadrotor_simulator.pc  uav_utils.pc  unitree_controller.pc  unitree_gazebo.pc  unitree_guide.pc  unitree_legged_control.pc  unitree_legged_msgs.pc  unitree_legged_real.pc  unitree_legged_sdk.pc  unitree_motor_ctrl.pc  unitree_move_base.pc  waypoint_generator.pc
devel/lib/simenv_cbf_train/: train.py
devel/lib/simenv_train/: deploy.py
devel/lib/so3_control/: control_example
devel/lib/so3_quadrotor_simulator/: quadrotor_simulator_so3
devel/lib/unitree_controller/: unitree_external_force  unitree_move_kinetic  unitree_servo
devel/lib/unitree_guide/: junior_ctrl  pointcloud2livox.py  state_from_gazebo  virtual_joy.py
devel/lib/unitree_legged_real/: control_via_keyboard  ros_udp
devel/lib/unitree_motor_ctrl/: unitree_motor_ctrl_node
devel/lib/waypoint_generator/: waypoint_generator
docs/: README.md  algorithm-interfaces.md  competition-rules.md  doors-and-elevator.md  evaluation.md  quick-start.md  reference.md  sensors-and-topics.md  troubleshooting.md
generated_building/: building_config.json  competition_scene.world  danger_truth.json  door_config.yaml  elevator_config.yaml  generation_checks.json  layout_metadata.json  model.sdf  multi_floor_building.world  scene_manifest.json  team_scene_info.json  world.sdf
generated_building/models/hotel_building/: model.config  model.sdf
logs/ros_elevator_test/: latest
logs/ros_elevator_trot_reverse_test/: latest
logs/ros_elevator_trot_test/: latest
logs/ros_elevator_walk_test/: latest
results/: danger_truth.json  detected_danger.json
src/Mid360_imu_sim/: README.md
src/building_generator_classic/: CMakeLists.txt  package.xml
src/building_generator_classic/building_generator_classic/: __init__.py  classic_export.py  control_runtime.py  control_server.py
src/building_generator_classic/scripts/: building_generator_classic_control
src/building_generator_classic/test/: test_classic_export.py  test_control_runtime.py
src/building_generator_core/: CMakeLists.txt  README.md
src/building_generator_core/building_generator_core/: __init__.py  cli.py  constraints.py  exporter.py  generator.py  layout.py
src/building_generator_core/test/: test_constraints.py  test_exporter.py  test_generator.py
src/building_generator_interfaces/: CMakeLists.txt  package.xml
src/building_generator_interfaces/srv/: CallElevator.srv  SetDoorState.srv
src/building_obstacles/: CMakeLists.txt
src/generated_building/: building_config.json  hotel_building.world
src/simenv_cbf_train/: CMakeLists.txt
src/simenv_cbf_train/launch/: train.launch
src/simenv_cbf_train/src/simenv_cbf_train/: __init__.py  cbf_layer.py  config.py  models.py  ppo.py  simenv_env.py  simple_env.py
src/simenv_train/: CMakeLists.txt  setup.py
src/simenv_train/launch/: deploy.launch  train_nav.launch
src/simenv_train/scripts/: deploy.py
src/simenv_train/src/simenv_train/: __init__.py  config.py  door_control.py  env.py  exploration.py
src/unitree_guide/: readme.md
src/unitree_guide/unitree_guide/unitree_guide/: .CMakeLists.txt.swp  CMakeLists.txt
src/unitree_guide/unitree_guide/unitree_guide/include/FSM/: FSM.h  FSMState.h  State_FixedStand.h  State_Passive.h  State_RL_test.h  State_Trotting.h
src/unitree_guide/unitree_guide/unitree_guide/include/common/: enumClass.h  timeMarker.h
src/unitree_guide/unitree_guide/unitree_guide/include/control/: CtrlComponents.h
src/unitree_guide/unitree_guide/unitree_guide/include/free_dog_sdk_cpp/: common.hpp  complex.hpp  lowCmd.hpp  lowState.hpp
src/unitree_guide/unitree_guide/unitree_guide/include/interface/: CmdPanel.h  IOFREEDOGSDK.h  IOInterface.h  IOROS.h  KeyBoard.h
src/unitree_guide/unitree_guide/unitree_guide/include/message/: LowlevelCmd.h  LowlevelState.h
src/unitree_guide/unitree_guide/unitree_guide/launch/: gazeboSim.launch  multi_floor_gazeboSim.launch
src/unitree_guide/unitree_guide/unitree_guide/scripts/: pointcloud2livox.py
src/unitree_guide/unitree_guide/unitree_guide/src/: main.cpp  state_from_gazebo.cpp
src/unitree_guide/unitree_guide/unitree_guide/src/FSM/: FSM.cpp  FSMState.cpp  State_FixedStand.cpp  State_FreeStand.cpp  State_Passive.cpp  State_RL_test.cpp  State_SwingTest.cpp  State_Trotting.cpp
src/unitree_guide/unitree_guide/unitree_guide/src/control/: BalanceCtrl.cpp
src/unitree_guide/unitree_guide/unitree_guide/src/free_dog_sdk_cpp/: common.cpp  lowCmd.cpp  lowState.cpp  unitreeConnectBoost.cpp
src/unitree_guide/unitree_guide/unitree_guide/src/interface/: IOFREEDOGSDK.cpp  IOROS.cpp  KeyBoard.cpp  WirelessHandle.cpp
(+87 files in other folders)
