<?xml version="1.0"?>
<package format="2">
  <name>building_generator_classic</name>
  <version>0.1.0</version>
  <description>Gazebo Classic adapters for generated buildings.</description>
  <maintainer email="2996199463@qq.com">tokou</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>building_generator_core</depend>
  <depend>building_generator_interfaces</depend>
  <depend>gazebo_msgs</depend>
  <depend>rospy</depend>
  <depend>python3-yaml</depend>
  <depend>tf</depend>

  <test_depend>python3-nose</test_depend>
</package>
