<?xml version="1.0"?>
<package format="2">
  <name>building_generator_interfaces</name>
  <version>0.1.0</version>
  <description>ROS interfaces for controlling generated building doors and elevators.</description>
  <maintainer email="2996199463@qq.com">tokou</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
